fix img & text alignments of cat & curate collect

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ header{
     justify-content: space-between;
     height: 6.6rem;
     padding: 0 4.8rem;
-    /* background-color: #d19987; */
+    background-color: #d19987;
 }
 
 .logo{
@@ -230,7 +230,7 @@ header{
 
 .container{
     width:100%;
-    height: 40rem;
+    /* height: 40rem; */
     margin : 0 auto;
     padding: 3rem;
   }
@@ -250,31 +250,34 @@ header{
 
 .img-item img{
     width:90%;
-    height: 20rem;
-  }
-  
-.text-item{
-    height:20rem;
-    text-align: center;
+    height: auto;
   }
 
-.text-item a:link, 
-.text-item a:visited{
+.category-item-container{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      font-size: 2rem;
+      padding: 1rem;
+      color: #644d44;
+      text-decoration: none;
+  }
+
+.img-item a:link, 
+.img-item a:visited{
     text-decoration: none;
     color:#271c18;
 }
   
-.text-item h3{
-    text-align: center;
+.img-item h3{
     font-size: 2rem;
     padding: 1rem;
-    color: #644d44;
+    color:#271c18;
 }
 
-.text-item p{
-    text-align: center;
+.img-item p{
     font-size: 1.5rem;
-    color: #644d44;
+    color:#271c18;
 }
   
 
@@ -287,6 +290,8 @@ header{
     font-size: 2.5rem;
     font-weight: normal;
     color: #271c18;
+    margin: 5rem 2rem 2rem 2rem;
+    padding-top: 2rem;
 }
 
 
